Fix HTML formatting and restore content

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h3>Where Is Glimbo?</h3>
         <p>Cute little platformer game still in alpha.</p>
         <img src="images/project1.png" class="project-image">
-        <a href="content/glimbo.zip" download class="project-btn">Download Demo 1</a>
+        <button class="project-btn" onclick="location.href='https://www.dropbox.com/scl/fi/m71506fhpxb9s6dzul6ux/where-is-glimb-demo-1.zip?rlkey=kcx7ausw1cpnvtd5d3u9ausu4&st=lgyofztm&dl=1'">Download Demo 1</button>
       </div>
 
       <div class="card">
@@ -229,4 +229,5 @@ document.getElementById("year").textContent=new Date().getFullYear();
 </script>
 
 </body>
+
 </html>
