--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       Ok, let's try this again...<br><br>
 
-      I'm Smiler, a teem who loves dabbling in anything technology, weather it be hardware or software!<br>
+      I'm Smiler, a teen who loves dabbling in anything technology, weather it be hardware or software!<br>
       I am by NO MEANS an expert, let alone a master, i just do this for enjoyment.<br><br>
 
       So i'd like you to come and take a gander at like, 4 years of my work!
@@ -231,3 +231,4 @@ document.getElementById("year").textContent=new Date().getFullYear();
 </body>
 
 </html>
+
