Refactor index.html and link theme.css
Updated the HTML structure and linked theme.css for styling.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Smilerland!</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css?v=2">
+<link rel="stylesheet" href="theme.css">
 <link rel="icon" type="image/png" href="images/welcomeimg.png">
 <link rel="icon" type="image/x-icon" href="images/welcomeimg.png">
 <link rel="apple-touch-icon" href="images/welcomeimg.png">
@@ -334,4 +334,5 @@ document.addEventListener('click',()=>{
 </script>
 </body>
 </html>
+
 
